base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    io.cilium/lb-ipam-ips: 10.10.2.51
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.2.51
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
